--- a/Docs/TODAES/Ref.bib
+++ b/Docs/TODAES/Ref.bib
@@ -250,7 +250,7 @@ pages={241-263},
 @article{Trindade2015,
 author={Trindade A., Cordeiro L.},
 title={Applying SMT-based verification to hardware/software partitioning in embedded systems},
-journal={ Design Automation for Embedded Systems (to appear)},
+journal={Design Automation for Embedded Systems (to appear)},
 volume= {},
 number= {},
 year={2015},
@@ -261,7 +261,7 @@ note= {},
 @article{Trindade2016,
 author={Trindade A., Ismail H. , Cordeiro L.},
 title={Multi-Core Model Checking to Hardware-Software Partitioning in Embedded Systems (short paper)},
-journal={To appear in V Brazilian Symposium on Computing Systems Engineering (SBESC)},
+journal={V Brazilian Symp. on Computing Systems Engineering (to appear)},
 year = {2015},
 }
 
@@ -271,7 +271,6 @@ author={Bjorner N., Phan A-D., Fleckenstein,L. },
 title={vZ - An Optimizing SMT Solver},
 journal={Proc. of the Intl. Conf. on Tools and Algorithms for the Construction and Analysis of Systems},
 volume= {9035},
-number= {},
 year={2015},
 pages={194--199},
 }
@@ -286,9 +285,9 @@ pages={1900--1905},
 
 @article{OpenMP1998,
 author={Matthias S. M\"{u}ller},
-title={OpenMP Architecture Review Board, OpenMP C and C++ Application Program Interface, Version 1.0},
-journal={Proc. of the Intl. Conf. on Computer Science Education},
-year = {1998},
+title={OpenMP Architecture Review Board, OpenMP C and C++ Application Program Interface, Version 2.0},
+journal={OpenMP Architecture Review Board},
+year = {2002},
 }
 
 @article{Cordeiro2012,
@@ -362,8 +361,9 @@ pages={337–-340},
 
 @article{Brummayer2009,
 author={Brummayer R., Biere A.},
-title={Boolector: An Efficient SMT Solver for Bit-Vectors and Arrays.},
+title={Boolector: An Efficient SMT Solver for Bit-Vectors and Arrays},
 journal={Proc. of the Intl. Conf. on Tools and Algorithms for the Construction and Analysis of Systems},
+volume={5505},
 year={2009},
 pages={174-–177},
 }
@@ -462,8 +462,6 @@ pages={1--1292},
 author={Dagum L., Menon R.},
 title={OpenMP: An Industry-Standard API for Shared-Memory Programming.},
 journal={Proc. of the Intl. Conf. on Computational Science Engineering},
-volume={5},
-number={1},
 year={1998},
 pages={46--55},
 }
@@ -521,10 +519,11 @@ pages={3--14},
 
 
 @article{Arato2005,
-author={Arato P., Mann Z.A., Orban A.},
-title={Algorithmic aspects of hardware/software partitioning.},
-journal={Transactions on Design Automation of Electronic Systems},
-volume={1},
+author={Arato P. and Mann Z.A. and Orban A.},
+title={Algorithmic aspects of hardware/software partitioning},
+journal={ACM Transactions on Design Automation of Electronic Systems},
+number={1},
+volume={10},
 year={2005},
 pages={136–-156},
 }
@@ -543,9 +542,10 @@ pages={845--857},
 
 @article{Holzmann2012,
 author={Holzmann G.},
-title={Parallelizing the spin model checker.},
+title={Parallelizing the spin model checker},
 journal={Proc. of the Intl. Symp. on Model Checking Software},
 year={2012},
+volume={7385},
 pages={155--171},
 }
 
@@ -579,6 +579,7 @@ pages={412--423},
 author={Sebastiani R., Trentin T.},
 title={OptiMathSAT: A Tool for Optimization Modulo Theories},
 journal={Proc. of the Intl. Conf. on Computer Aided Verification},
+volume={9206},
 year={2015},
 pages={447--454},
 }
@@ -586,7 +587,7 @@ pages={447--454},
 @article{Holzmann11,
 author={Gerard J. Holzmann, Rajeev Joshi, Alex Groce},
 title={warm Verification Techniques},
-journal={IEEE Trans. Software Eng},
+journal={IEEE Transactions Software Engineering},
 volume={37},
 number={6},
 year={2011},
