Reference according to TODAES.

--- a/Docs/TODAES/Ref.bib
+++ b/Docs/TODAES/Ref.bib
@@ -230,7 +230,7 @@ OPTannote = {•}
 }
 
 @Article{Arato2003,
-author={Peter Arato ,Sandor Juhasz ,Zoltan Adam Mann , Andras Orban, David Papp },
+author={Arato and Juhasz and Mann and Orban and Papp},
 title={Hardware/software partitioning in embedded system design},
 journal = {Intl. Symp. on Intelligent Signal Processing},
 year = {2003},
@@ -238,7 +238,7 @@ pages = {192--202},
 }
 
 @article{Mann2007,
-author={Zoltan Adam Mann, Andras Orban, Peter Arato},
+author={Mann and Orban and Arato},
 title={Finding optimal hardware/software partitions},
 journal={Formal Methods in System Design},
 volume={31},
@@ -248,7 +248,7 @@ pages={241-263},
 }
 
 @article{Trindade2015,
-author={Alessandro Trindade, Lucas Cordeiro},
+author={Trindade and Cordeiro},
 title={Applying SMT-based verification to hardware/software partitioning in embedded systems},
 journal={Design Automation for Embedded Systems (to appear)},
 volume= {},
@@ -259,7 +259,7 @@ note= {},
 }
 
 @article{Trindade2016,
-author={Alessandro Trindade, Hussama Ismail , Lucas Cordeiro},
+author={Trindade and Ismail and Cordeiro},
 title={Multi-Core Model Checking to Hardware-Software Partitioning in Embedded Systems (short paper)},
 journal={V Brazilian Symp. on Computing Systems Engineering (to appear)},
 year = {2015},
@@ -267,7 +267,7 @@ year = {2015},
 
 
 @article{Bjorner2015,
-author={Nikolaj Bjørner, Anh-Dung Phan, Lars Fleckenstein },
+author={Bjorner and Phan and Fleckenstein},
 title={vZ - An Optimizing SMT Solver},
 journal={Proc. of the Intl. Conf. on Tools and Algorithms for the Construction and Analysis of Systems},
 volume= {9035},
@@ -276,7 +276,7 @@ pages={194--199},
 }
 
 @article{Tang2009,
-author={Tao Tang , Yisong Lin, Xiaoguang Ren},
+author={Tang and Lin and Ren},
 title={Mapping OpenMP concepts to the stream programming model},
 journal={ Proc. of the Intl. Conf. on Computer Science Education},
 year={2010},
@@ -284,14 +284,14 @@ pages={1900--1905},
 }
 
 @article{OpenMP1998,
-author={Matthias Muller},
+author={Muller},
 title={OpenMP Architecture Review Board, OpenMP C and C++ Application Program Interface, Version 2.0},
 journal={OpenMP Architecture Review Board},
 year = {2002},
 }
 
 @article{Cordeiro2012,
-author={Lucas Cordeiro, Bernd Fischer, Joao Marques-Silva},
+author={Cordeiro and Fischer and Marques-Silva},
 title={SMT-based Bounded Model Checking for Embedded ANSI-C Software},
 journal={IEEE Transactions on Software Engineering},
 volume={38},
@@ -301,13 +301,13 @@ pages={957--974},
 }
 
 @article{Rao2009,
-author={Singiresu Rao},
+author={Rao},
 title={Engineering Optimization: Theory and Practice. 4th edition},
 year={2009},
 }
 
 @article{Biere2009,
-author={Armin Biere, Marijn Heule, Hans van Maaren, Toby Walsh},
+author={Biere and Heule and Maaren and Walsh},
 title={Bounded Model Checking.},
 journal={Handbook of Satisfiability},
 publisher={IOS Press},
@@ -316,7 +316,7 @@ year = {2009},
 
 
 @article{Clarke2001,
-author={Edmund Clarke, Armin Biere, Richard Raimi, Yunshan Zhu},
+author={Clarke and Biere and Raimi and Zhu},
 title={Bounded model checking using satisfiability solving},
 journal={Formal Methods in System Design},
 volume={19},
@@ -326,7 +326,7 @@ pages={7--34},
 }
 
 @article{Armando2009,
-author={Alessandro Armando, Jacopo Mantovani, Lorenzo Platania},
+author={Armando and Mantovani and Platania},
 title={Bounded model checking of software using SMT solvers instead of SAT solvers},
 journal={Intl. Journal on Software Tools for Technology Transfer},
 volume={11},
@@ -336,15 +336,15 @@ pages={69--83},
 }
 
 @article{Ganai2006,
-author={	Malay Ganai, Aarti Gupta},
+author={Ganai and Gupta},
 title={Accelerating high-level bounded model checking},
 journal={Proc. of the IEEE/ACM Intl. Conf. on Computer-Aided Design},
 year={2006},
-pages={794-–801},
+pages={794--801},
 }
 
 @article{Ramalho2013,
-author={Mikhail Ramalho, Mauro Freitas1, Felipe Sousa, Hendrio Marques, Lucas Cordeiro, Bernd Fischer},
+author={Ramalho and Freitas1 and Sousa and Marques and Cordeiro and Fischer},
 title={SMT-Based Bounded Model Checking of C++ Programs.},
 journal={Intl. Conf. and Workshops on the Engineering of Computer-Based Systems},
 year={2013},
@@ -352,24 +352,24 @@ pages={147--156},
 }
 
 @article{DeMoura2008,
-author={Leonardo De Moura, Nikolaj Bjørner},
+author={Moura and Bjorner},
 title={Z3: An Efficient SMT Solver},
 journal={Proc. of the Intl. Conf. on Tools and Algorithms for the Construction and Analysis of Systems},
 year={2008},
-pages={337–-340},
+pages={337--340},
 }
 
 @article{Brummayer2009,
-author={Robert Brummayer, Armin Biere},
+author={Brummayer and Biere},
 title={Boolector: An Efficient SMT Solver for Bit-Vectors and Arrays},
 journal={Proc. of the Intl. Conf. on Tools and Algorithms for the Construction and Analysis of Systems},
 volume={5505},
 year={2009},
-pages={174-–177},
+pages={174--177},
 }
 
 @article{Barrett2011,
-author={Clark Barrett, Christopher Conway, Morgan Deters, Liana Hadarean, Dejan Jovanovic, Tim King, Andrew Reynolds, Cesare Tinelli},
+author={Barrett and Conway and Deters and Hadarean and Jovanovic and King and Reynolds and Tinelli},
 title={CVC4},
 journal={Proc. of the Intl. Conf. on Computer-Aided Verification},
 volume={6806},
@@ -378,7 +378,7 @@ pages={171--177},
 }
 
 @article{Bozzano2005,
-author={Marco Bozzano ,Roberto Bruttomesso, Alessandro Cimatti1, Tommi Junttila, Peter Van Rossum, Stephan Schulz, Roberto Sebastiani},
+author={Bozzano and Bruttomesso and Cimatti and Junttila and Rossum and Schulz  and Sebastiani},
 title={MathSAT: Tight integration of SAT and mathematical decision procedures},
 journal={Journal of Automated Reasoning},
 volume={35},
@@ -388,16 +388,16 @@ pages={265--293},
 }
 
 @article{Dutertre2014,
-author={Bruno Dutertre},
+author={Dutertre},
 title={Yices 2.2},
 journal={Proc. of the Intl. Conf. on Computer-Aided Verification},
 volume= {8559},
 year={2014},
-pages={737–-744},
+pages={737--744},
 }
 
 @article{Wu2014,
-author={Minjie Wu, Weiwei Wu, Ning Tai, Hongyu Zhao, Jiawu Fan, Naichang Yuan},
+author={Wu and Wu and Tai and Zhao and Fan and Yuan},
 title={Research on OpenMP model of the parallel programming technology for homogeneous multicore DSP},
 journal={Proc. of the Intl. Conf. on Software Engineering and Service Science},
 year={2014},
@@ -405,7 +405,7 @@ pages={921--924},
 }
 
 @article{Bjorner2014,
-author={Nikolaj Bjørner, Anh-Dung Phan},
+author={Bjorner and Phan},
 title={vZ - Maximal Satisfaction with Z3},
 journal={Proc. of the Intl. Symp. on Symbolic Computation in Software Science},
 year={2014},
@@ -413,7 +413,7 @@ pages={1--10},
 }
 
 @article{Federica2008,
-author={Federica Paci, Rodolfo Ferrini, Yuqing Sun, Elisa Bertino},
+author={Paci and Ferrini and Sun and Bertino},
 title={Authorization and User Failure Resiliency for WS-BPEL business processes},
 journal={Proc. of the Intl. Conf. on Service-Oriented Computing},
 year={2008},
@@ -421,7 +421,7 @@ pages={116--131},
 }
 
 @article{NarodytskaN,
-author={Nina Narodytska, Fahiem Bacchus},
+author={Narodytska and Bacchus},
 title={Maximum Satisfiability Using Core-Guided MAXSAT Resolution},
 journal={Proc. of the Conf. on Artificial Intelligence},
 year={2014},
@@ -429,14 +429,14 @@ pages={2717--2723},
 }
 
 @article{Barth1995,
-author={Peter Barth , Davis Putnam },
+author={Barth and Putnam},
 title={Enumeration Algorithm for Linear Pseudo-Boolean Optimization.},
 journal={Technical Report MPI-I-95-2-003, Max Plank Institute for Computer Science},
 year={1995},
 }
 
 @article{Vasco2005,
-author={Vasco Manquinho,Joao Marques-Silva},
+author={Manquinho and Marques-Silva},
 title={Effective Lower Bounding Techniques for Pseudo-Boolean Optimization},
 journal={IST/INESC-ID, Technical University of Lisbon, Portugal},
 year={2005},
@@ -450,7 +450,7 @@ year={2015}
 }
 
 @article{Cormem,
-author={Thomas Cormen, Charles Leiserson, Ronald Rivest, Clifford Stein},
+author={Cormen and Leiserson and Rivest and Stein},
 title={Introduction to Algorithms},
 journal={MIT Press},
 volume={I-XIX},
@@ -459,7 +459,7 @@ pages={1--1292},
 }
 
 @article{Dagum1998,
-author={Leonardo Dagum, Ramesh Menon},
+author={Dagum and Menon},
 title={OpenMP: An Industry-Standard API for Shared-Memory Programming.},
 journal={Proc. of the Intl. Conf. on Computational Science Engineering},
 year={1998},
@@ -468,14 +468,14 @@ pages={46--55},
 
 
 @article{TheMathWorks2013,
-author={The MathWorks, Inc.},
+author={MathWorks and Inc.},
 title={MATLAB (version R2013a)},
 year={2013},
 }
 
 
 @article{Tranquillo2011,
-author={Joseph Tranquillo},
+author={Tranquillo},
 title={Matlab for Engineering and the Life Sciences},
 journal={Synthesis Lectures on Engineering. Morgan Claypool},
 year={2011},
@@ -483,7 +483,7 @@ year={2011},
 
 
 @article{Hong2010,
-author={Luhe Hong, Jianli Cai},
+author={Hong and Cai},
 title={The application guide of mixed programming between MATLAB and other programming languages},
 journal={Proc. of the Intl. Conf. on Computer and Automation Engineering},
 year={2010},
@@ -492,7 +492,7 @@ pages={185--189},
 
 
 @article{Cordeiro2011,
-author={Lucas Cordeiro , Bernd Fischer},
+author={Cordeiro and Fischer},
 title={Verifying multi-threaded software using SMT-based context-bounded model checking.},
 journal={Proc. of the Intl. Conf. on Software Engineering},
 year={2011},
@@ -500,7 +500,7 @@ pages={331--340},
 }
 
 @article{Teich2012,
-author={Jurgen Teich},
+author={Teich},
 title={Hardware/Software Codesign: The Past, the Present, and Predicting the Future},
 journal={Proc. of the IEEE, Special Centennial Issue},
 volume={100},
@@ -510,7 +510,7 @@ pages={1411--1430},
 
 
 @article{Guthaus2001,
-author={Guthaus M., Ringenberg J., Ernst D., Austin T., Mudge T., Brown R. },
+author={Guthaus and Ringenberg and Ernst and Austin and Mudge and Brown},
 title={Matthew  Guthaus, Jeffrey  Ringenberg, Dan Ernst, Todd Austin, Trevor Mudge, Richard Brown},
 journal={Proc. of the annual workshop on workload characterization},
 year={2001},
@@ -519,18 +519,18 @@ pages={3--14},
 
 
 @article{Arato2005,
-author={Peter Arato, Zoltan Adam Mann, Andras Orban},
+author={Arato and Mann and Orban},
 title={Algorithmic aspects of hardware/software partitioning},
 journal={ACM Transactions on Design Automation of Electronic Systems},
 number={1},
 volume={10},
 year={2005},
-pages={136–-156},
+pages={136--156},
 }
 
 
 @article{Holzmann2011,
-author={Gerard  Holzmann ,Rajeev Joshi, Alex Groce},
+author={Holzmann and Joshi and Groce},
 title={Swarm Verification Techniques},
 journal={IEEE Transactions on Software Engineering},
 volume={37},
@@ -541,7 +541,7 @@ pages={845--857},
 
 
 @article{Holzmann2012,
-author={Gerard  Holzmann},
+author={Holzmann},
 title={Parallelizing the spin model checker},
 journal={Proc. of the Intl. Symp. on Model Checking Software},
 year={2012},
@@ -551,7 +551,7 @@ pages={155--171},
 
 
 @article{Wintersteiger2009,
-author={Christoph Wintersteiger, Youssef Hamadi, Leonardo de Moura},
+author={Wintersteiger and Hamadi and Moura},
 title={A Concurrent Portfolio Approach to SMT Solving.},
 journal={Proc. of the Intl. Conf. on Computer-Aided Verification},
 year={2009},
@@ -560,7 +560,7 @@ pages={715--720},
 
 
 @article{Qawasmeh2014,
-author={Ahmad Qawasmeh,Abid Malik, Barbara Chapman},
+author={Qawasmeh and Malik and Chapman},
 title={OpenMP task scheduling analysis via OpenMP runtime API and tool visualization.},
 journal={Proc. of the Intl. Symp. on Parallel Distributed processing},
 year={2014},
@@ -568,7 +568,7 @@ pages={1049--1058},
 }
 
 @article{Pavlinovic2015,
-author={Zvonimir Pavlinovi, Tim King, Thomas Wies},
+author={Pavlinovi and King and Wies},
 title={Practical SMT-Based Type Error Localization},
 journal={Proc. of the Intl. Conf. on Functional Programming},
 year={2015},
@@ -576,7 +576,7 @@ pages={412--423},
 }
 
 @article{Patrick2015,
-author={Roberto Sebastiani, Patrick Trentin},
+author={Sebastiani and Trentin},
 title={OptiMathSAT: A Tool for Optimization Modulo Theories},
 journal={Proc. of the Intl. Conf. on Computer Aided Verification},
 volume={9206},
@@ -585,7 +585,7 @@ pages={447--454},
 }
 
 @article{Holzmann11,
-author={Gerard Holzmann, Rajeev Joshi, Alex Groce},
+author={Holzmann and Joshi and Groce},
 title={Swarm Verification Techniques},
 journal={IEEE Transactions Software Engineering},
 volume={37},
@@ -595,8 +595,22 @@ pages={845--857},
 }
 
 @book{hevc,
-author={ISO/IEC 23008-2},
+author={23008-2},
 title={Information technology -- high efficiency coding and media delivery in heterogeneous environments -- part 2: high efficiency video coding},
 year={2015},
 publisher={International Organization for Standardization}
-} 
+}
+
+@article{ref2,
+author={Gary J. Sullivan and Jens-Rainer Ohm and Woo-Jin Han and Thomas Wiegand},
+title={Overview of the high efficiency video coding (HEVC) standard},
+journal={IEEE Trans. Circuits Syst. Video Technol.},
+volume={22},
+number={12},
+month=sep,
+year={2012},
+pages={1649--1668},
+doi={},
+url={},
+note={},
+}
